@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2012  Vasco Nunes, Piotr Ożarowski
 
 
+2012-06-09  Michael Jahn
+	* DVD Palace movie plugin updated
+
 2012-06-07  Michael Jahn
 	* [#1010073] The MoviePosterDB seems to have quit working properly.
 
